<resources>
    <string name="app_name">Active Minutes</string>
    <string name="data_collection_screen">Data Collection</string>
    <string name="clear_btn_title">Clear</string>
    <string name="stop_btn_title">Stop</string>
    <string name="start_btn_title">Start</string>
    <string name="export_btn_title">Export</string>
    <string name="set_type_of_activity">Set type of activity</string>
    <string name="change_button_text">Change</string>
    <string name="activity_type_label_text">Activity Type</string>
    <string name="controls_text_label">Controls</string>
    <string name="number_of_recorded_instances_textview_text">Number of recorded instances:</string>
    <string name="select_activity_dialog_title">Select Activity</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_log_in_text">LOG IN</string>
    <string name="button_sign_up_text">SIGN UP</string>
    <string name="drawer_item_today">Today</string>
    <string name="drawer_item_history">History</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_log_out">Log Out</string>
    <string name="drawer_sticky_header_title">Exit the app</string>
    <string name="sleeping_hours_fragment_message">Set the time you normally go to sleep as well as the time you normally wake up.
        This is needed so ActiveMinutes knows when to start and stop mintor you activity levels.</string>
    <string name="button_set_sleeping_hours_text">Set sleeping hours</string>
    <string name="pa_goal_fragment_message">Studies suggest minimum 30 minutes of
        physical activity (PA) such as walking, running or cycling per day.
        An ideal amount would be 1 hour. Please choose a physical activity amount in minutes from the list bellow</string>
    <string name="button_set_pa_goal_text">Set PA goal</string>
    <string name="set_pa_goal_dialog_title">Select PA goal</string>
    <string name="button_set_mci_text">SET MCI</string>
    <string name="mci_fragment_message">It is shown that breaking every hour spend in a
        static activity (e.g. watching TV) by 5 minute walk is beneficial for the common health
        state of a person. Please set the maximum inactivity interval in minutes bellow. If a prolonged
        inactivity is detected (e.g. 1 hour of inactivity), a notification will be sent to let you know</string>
    <string name="set_mci_dialog_title">Set Maximum continious inactivity</string>
    <string name="goal_achieved_text">Goal Achieved</string>
    <string name="daily_button_text">Daily</string>
    <string name="weekly_button_text">Weekly</string>
    <string name="pa_goal_reached_goal_min">PA goal:reached/goal (%1$s)</string>
    <string name="mci_goal_reached_goal_min">MCI goal:reached/goal (min)</string>
    <string name="settings_st_goal_summary"> %1$s of maximum continuous inactivity</string>
    <string name="settings_pa_goal_summary"> %1$s minutes per day</string>
    <string name="settings_sleeping_hours_summary">%1$d - %2$d</string>
    <string name="notify_me_when_inactive_key">pref_key_notify_when_inactive</string>
    <string name="average_inactivity_interval_label">Average inactivity interval</string>
    <string name="longest_inactivity_interval_label">Longest inactivity interval</string>
    <string name="min_target_exceeded_label">%1$s min target exceeded:</string>
    <string name="history_weekly_dialog_content_title"> <u>Details about the selected week activity levels in minutes </u></string>
    <string name="dialog_positive_message">OK</string>
    <string name="dialog_negative_message">Cancel</string>
    <string name="dialog_daily_title">Day details</string>
    <string name="dialog_weekly_title">Week details</string>
    <string name="history_daily_dialog_content_title"><u>Details about the selected day activity levels in minutes </u></string>
    <string name="reset_database_dialog_content">All the monitoring data stored in the database will be deleted. Proceed?</string>
    <string name="delete_database_dialog_title">Delete data</string>
</resources>
