<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_data_collection"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="georgikoemdzhiev.activeminutes.data_collection.view.DataCollectionActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:background="@color/dirtyWhite"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/main_controls_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/startBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/start_btn_title"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/stop_clear_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/stopBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/failRed"
                    android:text="@string/stop_btn_title"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/clearBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/currentGrey"
                    android:text="@string/clear_btn_title"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/exportBtn"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_below="@+id/main_controls_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@color/darkGrey"
            android:text="@string/export_btn_title"
            android:textColor="@android:color/white"/>

    </RelativeLayout>


</RelativeLayout>
